# goland-bazel-mods-repro

./: .gitignore  WORKSPACE  go.mod  repositories.bzl
proto/: BUILD.bazel  foo.proto
src/: BUILD.bazel  main.go
