load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//:__subpackages__"])

proto_library(
    name = "foo_proto",
    srcs = ["foo.proto"],
)

go_proto_library(
    name = "foo_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/iamricard/goland-bazel-mods-repro/proto/foopb",
    proto = ":foo_proto",
)

go_proto_library(
    name = "foopb_go_proto",
    importpath = "proto/foopb",
    proto = ":foo_proto",
)

go_library(
    name = "foopb",
    embed = [":foopb_go_proto"],
    importpath = "proto/foopb",
)
